--- a/packages/projects/vue-project/package.json
+++ b/packages/projects/vue-project/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
-    "preview": "vite preview",
+    "dev:test": "vite --mode test",
+    "dev:production": "vite --mode production",
+    "build:test": "run-p type-check \"build-only --mode test {@}\" --",
+    "build:production": "run-p type-check \"build-only --mode production {@}\" --",
+    "preview": "vite preview --open",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
