chore(monorepo 整体配置): :hammer: 修改 commitlint、cz-git 的配置

--- a/.lintstagedrc.yaml
+++ b/.lintstagedrc.yaml
@@ -3,6 +3,6 @@
   '*.{js,jsx}': ['prettier --write', 'eslint --fix'],
   '*.{ts,tsx}': ['prettier --write', 'eslint --fix'],
   '*.{css,less,scss}': ['prettier --write', 'stylelint --fix'],
-  '*.{html}': ['prettier --write'],
+  '*.html': ['prettier --write'],
   '*.{md,json}': ['prettier --write']
 }
