--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "postcss-less": "^6.0.0",
+    "prettier": "^3.2.5",
     "stylelint": "^16.4.0",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard": "^36.0.0",
